# mimicros

./: .gdbinit.template  .justfile  Cargo.toml  Makefile  build.rs
.cargo/: config.toml
crates/allocator/: Cargo.toml
crates/allocator/src/: buddy.rs  lib.rs  linked_list.rs  test.rs
crates/gic/: Cargo.toml
crates/gic/src/: gic_v2.rs  lib.rs
crates/hal/: Cargo.toml
crates/hal/src/: console.rs  irq.rs  lib.rs
crates/hal/src/arch/: mod.rs
crates/hal/src/arch/aarch64/: context.rs  cpu.rs  irq.rs  mod.rs
crates/hal/src/arch/dummy/: mod.rs
crates/hal/src/platform/: mod.rs
crates/hal/src/platform/aarch64/: boot.rs  boot.s  generic_timer.rs  gic.rs  mod.rs
crates/hal/src/platform/qemu_aarch64/: entry.rs  linker.ld  mem.rs  qemu_aarch64.dts
crates/kernel_guard/: Cargo.toml
crates/kernel_guard/src/: lib.rs
crates/lazy_init/: Cargo.toml
crates/lazy_init/src/: lib.rs
crates/linked_list/src/: lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/memory_addr/: Cargo.toml
crates/memory_addr/src/: lib.rs
crates/page_table/: Cargo.toml
crates/page_table/src/: bits64.rs  lib.rs
crates/page_table_entry/: Cargo.toml
crates/page_table_entry/src/: aarch64.rs  lib.rs
crates/percpu/: Cargo.toml
crates/percpu/percpu_macro/: Cargo.toml
crates/percpu/percpu_macro/src/: arch.rs  lib.rs
crates/percpu/src/: arch.rs  lib.rs
crates/ratio/: Cargo.toml
crates/ratio/src/: lib.rs
crates/scheduler/src/: lib.rs  rr.rs
crates/spinlock/: Cargo.toml
crates/spinlock/src/: lib.rs
crates/task/: Cargo.toml
crates/task/src/: lib.rs  run_queue.rs  task.rs  timer.rs  wait_queue.rs
crates/timer_list/: Cargo.toml
crates/timer_list/src/: lib.rs
src/: boot.rs  boot.s  console.rs  cpu.rs  exception.rs  irq.rs  lang_items.rs  linker.ld  main.rs  mem.rs  pagetable.rs  platform.rs
src/arch/: aarch64.rs  mod.rs
src/arch/aarch64/: exception.rs  exception.s  mod.rs
src/platform/: aarch64.rs  mod.rs  qemu_aarch64.rs  time.rs
src/platform/aarch64/: boot.rs  boot.s  generic_timer.rs  gic.rs  mod.rs
src/platform/qemu_aarch64/: entry.rs  mem.rs  mod.rs
