workspace = { members = [ "crates/memory_addr", "crates/page_table_entry"] }
[package]
name = "mimicros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64-cpu = "9.4.0"
tock-registers = "0.8"
bitflags = "2.4"

memory_addr = { path = "crates/memory_addr" }
page_table_entry = { path = "crates/page_table_entry" }
