[workspace]
resolver = "2"

members = [
  "crates/allocator",
  "crates/gic",
  "crates/hal",
  "crates/kernel_guard",
  "crates/lazy_init",
  "crates/linked_list",
  "crates/logger",
  "crates/memory_addr",
  "crates/page_table",
  "crates/page_table_entry",
  "crates/ratio",
  "crates/scheduler",
  "crates/spinlock",
  "crates/task",
]

[package]
name = "mimicros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64-cpu = "9.4.0"
tock-registers = "0.8"
bitflags = "2.4"
log = "0.4"
cfg-if = "1.0"

memory_addr = { path = "crates/memory_addr" }
page_table = { path = "crates/page_table" }
page_table_entry = { path = "crates/page_table_entry" }
allocator = { path = "crates/allocator" }
spinlock = { path = "crates/spinlock" }
logger = { path = "crates/logger" }
lazy_init = { path = "crates/lazy_init" }
ratio = { path = "crates/ratio" }
gic = { path = "crates/gic" }
scheduler = { path = "crates/scheduler" }
task = { path = "crates/task" }
hal = { path = "crates/hal" }
kernel_guard = { path = "crates/kernel_guard" }
